Link to CSV. General info on pages. Add images to folder. Only display qty's > 1.

--- a/app/views/products/list.html.erb
+++ b/app/views/products/list.html.erb
@@ -1,1 +1,9 @@
-Test
+<p>
+  Products
+</p>
+
+<ul>
+  <% @available_products.each do |product| %>
+  <li><%= product.item%> <%= product.price %> More Info <%= link_to "More Info", "/products/#{product.pid}" %></li>
+  <% end %>
+</ul>
