--- a/app/views/products/view.html.erb
+++ b/app/views/products/view.html.erb
@@ -1,3 +1,10 @@
+<style>
+img {
+  width: 500px;
+  height: 500px;
+}
+</style>
+
 <ul>
 <li>Item: <%= @product.item %></li>
 <li>Price: <%= @product.price %></li>
@@ -6,4 +13,6 @@
 <li>L: <%= @product.dimension_l %></li>
 <li>H: <%= @product.dimension_h %></li>
 <li>Condition: <%= @product.condition %></li>
+
+<img><%= image_tag @product.img_file %><img>
 </ul>
