--- a/app/views/products/view.html.erb
+++ b/app/views/products/view.html.erb
@@ -1,18 +1,15 @@
-<style>
-img {
-  width: 500px;
-  height: 500px;
-}
-</style>
-
+<div class="container">
 <ul>
-<li>Item: <%= @product.item %></li>
+<li>Name: <%= @product.name %></li>
 <li>Price: <%= @product.price %></li>
 <li>Description: <%= @product.description %></li>
 <li>W: <%= @product.dimension_w %></li>
 <li>L: <%= @product.dimension_l %></li>
 <li>H: <%= @product.dimension_h %></li>
 <li>Condition: <%= @product.condition %></li>
+<li>Discount Price: <%= @product.discount_price %></li>
 
 <img><%= image_tag @product.img_file %><img>
 </ul>
+
+</div>
