--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+Your furniture is old
+Ours is older
+
+<%= link_to "Checkout our products", "/products", :class => "btn btn-primary" %>
