--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,11 @@
-Your furniture is old
-Ours is older
+<div class="container">
+  <p>
+    Your furniture is old
+  </p>
+  <p>
+    Ours is older
+  </p>
 
-<%= link_to "Checkout our products", "/products", :class => "btn btn-primary" %>
+  <%= link_to "Checkout our products", "/products", :class => "btn btn-primary" %>
+
+</div>
