--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,14 @@
 @import 'bootstrap';
 @import 'welcome';
 @import 'products';
+
+.title_bar {
+  text-align: center;
+  background-color: #2C3E4E;
+  color: #F7FFFA;
+  padding: 20px 0px 20px 0px;
+  margin: 20px 0px 10px 0px;
+  h2 {
+    margin: 0;
+  }
+}
