--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,5 @@
 <div class="container">
-  <p>
-    Your furniture is old
-  </p>
-  <p>
-    Ours is older
-  </p>
-
+  <h3>Your Furniture is Old</h3>
+  <h4>Ours is older</h4>
   <%= link_to "Checkout our products", "/products", :class => "btn btn-primary" %>
-
 </div>
