--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,21 @@
-// Place all the styles related to the products controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.col-sm-3 {
+  padding: 15px;
+  text-align: left;
+  margin: 5px 20px 5px 20px;
+}
+.center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.inner_wrap {
+  border: 1px solid black;
+  padding: 5px;
+  min-height: 360px;
+}
+.thumbnail {
+  width: 200px;
+  height: 200px;
+  text-align: left;
+  border: none;
+}
