--- a/app/views/products/view.html.erb
+++ b/app/views/products/view.html.erb
@@ -1,3 +1,18 @@
+<div class="corner_nav">
+  <ul>
+    <li>
+      <%= link_to "/" do %>
+        <span class="glyphicon glyphicon-home"></span>
+      <% end %>
+    </li>
+    <li>
+      <%= link_to "/products" do %>
+        <span class="glyphicon glyphicon-arrow-left"></span>
+      <% end %>
+    </li>
+  </ul>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-md-8 center-block">
